[package]
name = "armv7a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["critical-section-single-core"]
critical-section-single-core = ["critical-section/restore-state-u32"]
critical-section-multi-core = ["critical-section/restore-state-u32"]

[dependencies]
critical-section = "1.1.1"
macropol = "0.1.3"
tock-registers = { git = "https://github.com/moritz-meier/tock.git", branch = "feature/fieldvalue-from-value" }
